Updated readme and small fix to summary

--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@ L.tileLayer('http://calvinnwq.github.io/maperitive-presentation/assets/tiles/{z}
 							<a href="#/5">Editing custom maps</a>
 						</li>
 						<li class="fragment">
-							<a href="#/6">Loading custom map in Maperitive</a>
+							<a href="#/6">Loading custom maps in Maperitive</a>
 						</li>
 						<li class="fragment">
-							<a href="#/7">Generating Tiles</a>
+							<a href="#/7">Generating map tiles</a>
 						</li>
 					</ol>
 				</section>
