Added background slides

--- a/index.html
+++ b/index.html
@@ -44,6 +44,38 @@
 				</p>
 			</section>
 
+
+			<!-- SLIDE: BACKGROUND -->
+			<section>
+				<section>
+					<h2>Background</h2>
+					<p class="fragment">I've created an app which utilises <a href="https://dev.twitter.com/docs/streaming-apis">Twitter's Streaming API</a> to retrieve real time tweets with geolocation and plot them onto a map using <a href="http://leafletjs.com/">leaflet.js</a>.</p>
+					<p class="fragment">...</p>
+					<p class="fragment">Then came the requirement</p>
+					<p class="fragment">...</p>
+					<h3 class="fragment"><strong>custom designed map</strong></h3>
+				</section>
+
+				<section>
+					<h2>What next?</h2>
+					<p class="fragment">Having no clue, I did what any of you would<br>...</p>
+					<div class="fragment">
+						<h3><strong>Google</strong></h3>
+						<a class="fancybox" href="assets/img/background-search.png">
+							<img src="assets/img/background-search.png" alt="Google Search" />
+						</a>
+					</div>
+				</section>
+
+				<section>
+					<h2>Maperitive</h2>
+					<p class="fragment">This presentation will go through the solution I stuck with after a couple others that I've tried</p>
+					<p class="fragment">...</p>
+					<h3 class="fragment"><strong>So let's begin!</strong></h3>
+				</section>
+			</section>
+
+
 			<!-- SLIDE: 1. MAPERITIVE -->
 			<section>
 				<section>
