Fixed example map bugs

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ L.tileLayer('http://calvinnwq.github.io/maperitive-presentation/assets/tiles/{z}
 
 				<section>
 					<h3>Example Result</h3>
-					<p>This works for zoom 11 and 12 and is bound to the bounding box which prevents any tile outside of it from being loaded.</p>
+					<p><a href="#" id="map-run">Run it!</a></p>
 					<div id="map"></div>
 				</section>
 			</section>
